--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':library')
+    compile project(':caldroid')
     compile 'com.android.support:appcompat-v7:21.0.0'
-    compile 'com.roomorama:caldroid:1.1.8'
+    //compile 'com.roomorama:caldroid:1.1.8'
 }
